Implement a simple API for adding users to channels (not using the database yet)
